apps(frontend): fix misaligned input and label
looked bad only in Safari

--- a/apps/todos/frontend/src/App.css
+++ b/apps/todos/frontend/src/App.css
@@ -28,6 +28,15 @@
   padding: 0.2rem;
 }
 
+.todo-list li span {
+  display: flex;
+  align-items: flex-end;
+}
+
+.todo-list li span label {
+  padding: 0 0.5rem;
+}
+
 .todo-list form {
   padding: 0;
 }
